# google-code-jam-2010

./: CMakeLists.txt  README.md
fair_warning/src/: CMakeLists.txt  fair_warning.cpp  fair_warning.hpp  main.cpp
fair_warning/test/: CMakeLists.txt  fair_warning_test.cpp
qualification/: CMakeLists.txt
qualification/fair_warning/src/: CMakeLists.txt  fair_warning.cpp  fair_warning.hpp  main.cpp
qualification/fair_warning/test/: CMakeLists.txt  fair_warning_test.cpp
qualification/snapper_chain/src/: CMakeLists.txt  snapper_chain.hpp
qualification/snapper_chain/test/: CMakeLists.txt  snapper_chain_test.cpp
qualification/theme_park/data/: C-large-practice.out
qualification/theme_park/src/: CMakeLists.txt  main.cpp  theme_park.hpp
qualification/theme_park/test/: CMakeLists.txt
round1a/: CMakeLists.txt
round1a/make_it_smooth/: CMakeLists.txt  main.cpp
round1a/rotate/src/: CMakeLists.txt  main.cpp  rotate.hpp
round1a/rotate/test/: CMakeLists.txt  rotate_test.cpp
snapper/: CMakeLists.txt  snapper.hpp  snapper_test.cpp
snapper/src/: CMakeLists.txt  main.cpp  snapper.hpp
snapper/test/: snapper_test.cpp
snapper_chain/src/: CMakeLists.txt  main.cpp  snapper.hpp  snapper_chain.hpp
snapper_chain/test/: CMakeLists.txt  snapper_test.cpp
theme_park/test/: CMakeLists.txt  theme_park_test.cpp
